
file(GLOB_RECURSE SMILE2D_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE SMILE2D_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

add_executable(Smile2D ${SMILE2D_SOURCE_FILES} ${SMILE2D_HEADER_FILES})

target_link_libraries(Smile2D ${EIGEN3_LIBRARIES})

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
